--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -36,3 +36,15 @@
     opacity: 1;
   }
 }
+
+.chores {
+  position: absolute;
+  bottom: 8px;
+  left: 8px;
+  font-size: 12px;
+  font-style: italic;
+
+  a {
+    color: white;
+  }
+}
