--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -13,6 +13,14 @@
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= plant.image_url %>')">
           <%= plant.name %>
           <%= link_to "+", plant_path(plant), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "card-remove-link" %>
+          <% if plant.chores.present? %>
+            <div class="chores">
+              <span>The last chore : <em><%= plant.last_chore_name %></em></span>
+            </div>
+          <% end %>
+          <%= link_to new_plant_completion_path(plant) do %>
+            <i class="fa-solid fa-check"></i>
+          <% end %>
         </div>
       </div>
     <% end %>
